@@ -2,6 +2,8 @@ package uk.emarte.reverse.velocity;
 
 import org.xml.sax.Attributes;
 
+import java.lang.reflect.InvocationTargetException;
+
 class ParserContentHandler extends AbstractContentHandler {
 	private final ParserConfig config;
 	private final ListableMap result;
@@ -11,23 +13,19 @@ class ParserContentHandler extends AbstractContentHandler {
 		this.result = result;
 	}
 
-	@SuppressWarnings("unchecked")
 	@Override
 	protected void processElement(String path, Attributes attributes) {
 		MapProcessor valueProcessor = config.getProcessorForElement(path);
-		Class clazz = null;
+		Class<?> clazz = null;
 		Boolean list;
 
 		if (valueProcessor != null) {
 			try {
 				clazz = config.getClassForPath(path);
 				list = config.getListForPath(path);
-				valueProcessor.processValue(result, clazz.newInstance(), list != null && list);
+				valueProcessor.processValue(result, clazz.getDeclaredConstructor().newInstance(), list != null && list);
 			}
-			catch (IllegalAccessException ie) {
-				throw new IllegalStateException("Failed to instantiate class [" + clazz + "]");
-			}
-			catch (InstantiationException e) {
+			catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException ie) {
 				throw new IllegalStateException("Failed to instantiate class [" + clazz + "]");
 			}
 		}
